// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Kryptos (RSA) export should export b64 1`] = `
{
  "algorithm": "RS512",
  "id": "3b9a051f-e1ec-562b-bf92-7cf92ec465ba",
  "privateKey": "MIIJKQIBAAKCAgEA7cxLHoxaHdYU8EX2ij5m42XIQYWBUxKMOfVbV2OX0nNHEdojXfRfONvrAHwsvRqcdN44yv1E1be18qs5HRB67D3qLeRjXcjegdjWvQj66IFVZIxQHNJ-LXDbAYs7gez8RYbBObnDzfrqy9vIPZet1tbqvlxv9aTR38x3ORJ4Y6Ym9StbKOUIo7BLIvoc1M5uNUIEnFKKZhbmVR423-F50w_E0618KExZgeur_8cMsSWZxyl0oeSI-rIodjfVJbshT1yy98zKRj-mMnyPKgHQARr9SwDA5Xlt9L2fVZ72xgwaPOBUgFoDTPQsqQ3Rkj7nYUSqwQVEL0-oH2K7U3OeGeKyIQMNzRdSfYMw3gSc5dtwqX64oK33lN2jzTKa0clSZjqJ4jzUL1YrXMddF07dMQqjN2mGjeZVy5LaO4B58Y5l-kO01KdwA-_LcDhkNgbKiZMZVtNPlVkR3nCvInt5cqPOqMOcLW3oA1wmh7zauWqorklpSSs75zw8ETtzATSJv8h7kUG9Bl1QQgdBkGqKb4ZG-r5Bj6pwJrHVmgPSMowP8P9G13iQLFdKX714A3DMKDc03TJvs2yVK81YUCtO5aRdwb0q0YcFqn9BHI3cmO-kOhXquMakPQ3zW_FBSnIeBhJMObCQOmYEuZxrifMcCQTY7j5jsP962e7ZPn53STcCAwEAAQKCAgArosNeFa8rrm8lMBFviMfkjnbS3ya-Ebc9o3JhdNsVOSYfdoHq6b7XdjOHYUHsaYewQl71kMgi15VBtH3EgZOs6iegyDobqZJ7DUlKYu134NPEoaLJxy50NDNb8yq2SsB4GaQ3bYkqsRKI2gnCk6TIuaNVzyyUTOxePuzZwjPpRUH81znhJTYSo3UGNBM6Ua8TgsvJy7OtzCH0GJlFN-DdBBXAKiOQWYJLPu3O_72qfBXd4BOQ6ZjhN_QIzXIFfHM-VupYYnHzthZPSWAT-0UqDsPQEZFUCpZMxMcKNSNfcDUYWqnm652Tb3MKioicZ4KZ7LnQtaCvddSJ_doWFC88gjf2CFVdB7XlL2qkK6jY7tQXAJ4NAZwZo7PtIHf3lTvD8jI6a1ANf_MEb2Ww-ZNJHVw8ht0SB-ucLJtllyNesTc9MwyLdwp8864KK2TBT3V2h0h9ksySTB6oqWYY4tghz4mZmH95GvttORqVeJXExNMhrouI7-nbTJa6QInFb7ZGeRg3aV0GcNTQfYmEpCuwPz5hFz_MGcslDZMyvDraE3C1XYMNWg0Pewm7RII4xR0fQqZ8iSkE8RnjeyYJQv17R8b-rTTgFt2a3yri9Xy2t1gX-fP776jK5qx7T1wnsJ_6qao1aqwBuLpk1HTi1YJBqvc57DXRnN9m2cPeM351gQKCAQEA-chzifBq71q8mETLfBQjWh5kKkVUdaaSuZ02lyMhziR8iZAsF0R08SFP2XWlOJrRGvLBItul787MurOI4VLhOSF-y5CZufSxHO-xDsZTDGD-GxYWAuLcdshcSl4HyJ4SZs13u3FUNVJeINC6IY4kn8iWHnPUbUHtu4kKvd-0t6hYxUB36wb_4fUjnQnghjtSJK23oeoArQ7ZDA0hApC3fPE2g5oQDkGqWDd1Smrmz3XlAZTMK9vqUlGHZRhaqC-dBhptLGSUulwrncEqsYKlW7NYppAWgHAY40wRy5Yglpv9GOhtJfUqkm7mQsmLhVw-1GtGc7Mi8sP3Nn-03mcqoQKCAQEA87d6H0DGvJNNLCZdlexp9Q84PpZYMMy-4JjbOpZh6qyhvclgXnkwXk0uo7G1dI5a--Eggft6_nQs8qQ-2bbtJ3V6BAECnEsWPJeWmeiMFEf0L51P0MMf_AY5Y4XOLCE6A3TieuH4NJ0iWMIZqYkCEYIqGTjR3TWNkSzQGJaewKpDu1m95dZCIbXGMXc0Tg6QJF0DIRdpqSQw5QAyLFmSQYLudjds688te-s63g02W_xLeUgKOKd-zsMY_xnubElXaEXVItBtgpbPoMqz6DGr92uNTpKUO3Wb2swIHhoMKp5G7XNQzSlsHLnEjwbz8m4xMXlCZDfx_-ukJ0iNFlz81wKCAQEAqxYylUO4axPSY9WTLvy4Lizs3Ms6C4-5pitZzfHBYOo65xp6KMG5-8OeZsufDIN2QKgPw-mA4h3auvLoCbX0EGax64qy0N0aR0CiHQWYsrzor_LTxsxOx4l7NXDskew7nHCV1yzLye4ODRoKs5sh2NPShy89TEzBIhe-5MkKhlVn4EvFF5VmxQVcjF7MjASrwfW-9sdKCT9HSWrgtlobZBfwB_oJj0pI_D2YOA265FTTM98QbeYmvJWdUJB64AIk4p5NMv_9oxwov9gkfwuGaaYRTZ0Z3IVrdpyO_8xnq-FSXbItuLcRntUZIJvd1c2WN3b2_Z6wjGnPtWOJpmAxoQKCAQAdD-kBJxFL1WjjdeO9CAcOkPUNCZKUpyWv1Kp3zwz4FgPnhMb4HQ12gU-pd3yC3KLe3FarCVj-VM4zVQClp5maFfkp1xD_oDiTmyP7UG670GS-9MxawZnjzL41LvSJ8KBhXyPOsXmOlJpO6T50KAFWIyZwAYWNEmDCSgy6keN2aBdRlP7_FFCogmuS5HsZP8VSgMDpxkf0QnuOIzrYbQnyw_E5qZxUdk0fNMq9RegQigJaAQwu-1I0x7EIYog643gH2CP1VdNpOiCiNOnFK38tLucX0oTYnkqqiaACLur6fgtJL3IYNPNObZyRzatzYk59bs9K8hzqfqgBgzZHz2jbAoIBAQCmSl--lhVQbwXWjJMoXQYwZB7iLVXAgZDgzjStZlQ_nEmYf6v-QTPsPz6UKc5FWylCfWA-5B6_rdRFoX_bkHOYGS5G0peubDhsW8rKwuqCbY9Yfy8EM44D559NRW29J0eVDVpRhEtY3j_YqFZD9n5fS-VhMbKO1hZCMQK_kI4CuJ1q8TaIx-L69Yl7UtYHnmtyatuHaNzfx6cw10PZIn0YxB5OFl5bmKYKVqHw0JD_CozWoKAhUfbYS55K3DGfh2jJtGpdyOq8VS-e8H14C_GZxdwN1Umi7dzvOcHd-_xi_3DcHEwNLtkDhkCeWlE3PQs0Cu5yWl3NlaFVrRmN9csJ",
  "publicKey": "MIICCgKCAgEA7cxLHoxaHdYU8EX2ij5m42XIQYWBUxKMOfVbV2OX0nNHEdojXfRfONvrAHwsvRqcdN44yv1E1be18qs5HRB67D3qLeRjXcjegdjWvQj66IFVZIxQHNJ-LXDbAYs7gez8RYbBObnDzfrqy9vIPZet1tbqvlxv9aTR38x3ORJ4Y6Ym9StbKOUIo7BLIvoc1M5uNUIEnFKKZhbmVR423-F50w_E0618KExZgeur_8cMsSWZxyl0oeSI-rIodjfVJbshT1yy98zKRj-mMnyPKgHQARr9SwDA5Xlt9L2fVZ72xgwaPOBUgFoDTPQsqQ3Rkj7nYUSqwQVEL0-oH2K7U3OeGeKyIQMNzRdSfYMw3gSc5dtwqX64oK33lN2jzTKa0clSZjqJ4jzUL1YrXMddF07dMQqjN2mGjeZVy5LaO4B58Y5l-kO01KdwA-_LcDhkNgbKiZMZVtNPlVkR3nCvInt5cqPOqMOcLW3oA1wmh7zauWqorklpSSs75zw8ETtzATSJv8h7kUG9Bl1QQgdBkGqKb4ZG-r5Bj6pwJrHVmgPSMowP8P9G13iQLFdKX714A3DMKDc03TJvs2yVK81YUCtO5aRdwb0q0YcFqn9BHI3cmO-kOhXquMakPQ3zW_FBSnIeBhJMObCQOmYEuZxrifMcCQTY7j5jsP962e7ZPn53STcCAwEAAQ",
  "type": "RSA",
  "use": "sig",
}
`;

exports[`Kryptos (RSA) export should export der 1`] = `
{
  "algorithm": "RS512",
  "id": "3b9a051f-e1ec-562b-bf92-7cf92ec465ba",
  "privateKey": {
    "data": [
      48,
      130,
      9,
      41,
      2,
      1,
      0,
      2,
      130,
      2,
      1,
      0,
      237,
      204,
      75,
      30,
      140,
      90,
      29,
      214,
      20,
      240,
      69,
      246,
      138,
      62,
      102,
      227,
      101,
      200,
      65,
      133,
      129,
      83,
      18,
      140,
      57,
      245,
      91,
      87,
      99,
      151,
      210,
      115,
      71,
      17,
      218,
      35,
      93,
      244,
      95,
      56,
      219,
      235,
      0,
      124,
      44,
      189,
      26,
      156,
      116,
      222,
      56,
      202,
      253,
      68,
      213,
      183,
      181,
      242,
      171,
      57,
      29,
      16,
      122,
      236,
      61,
      234,
      45,
      228,
      99,
      93,
      200,
      222,
      129,
      216,
      214,
      189,
      8,
      250,
      232,
      129,
      85,
      100,
      140,
      80,
      28,
      210,
      126,
      45,
      112,
      219,
      1,
      139,
      59,
      129,
      236,
      252,
      69,
      134,
      193,
      57,
      185,
      195,
      205,
      250,
      234,
      203,
      219,
      200,
      61,
      151,
      173,
      214,
      214,
      234,
      190,
      92,
      111,
      245,
      164,
      209,
      223,
      204,
      119,
      57,
      18,
      120,
      99,
      166,
      38,
      245,
      43,
      91,
      40,
      229,
      8,
      163,
      176,
      75,
      34,
      250,
      28,
      212,
      206,
      110,
      53,
      66,
      4,
      156,
      82,
      138,
      102,
      22,
      230,
      85,
      30,
      54,
      223,
      225,
      121,
      211,
      15,
      196,
      211,
      173,
      124,
      40,
      76,
      89,
      129,
      235,
      171,
      255,
      199,
      12,
      177,
      37,
      153,
      199,
      41,
      116,
      161,
      228,
      136,
      250,
      178,
      40,
      118,
      55,
      213,
      37,
      187,
      33,
      79,
      92,
      178,
      247,
      204,
      202,
      70,
      63,
      166,
      50,
      124,
      143,
      42,
      1,
      208,
      1,
      26,
      253,
      75,
      0,
      192,
      229,
      121,
      109,
      244,
      189,
      159,
      85,
      158,
      246,
      198,
      12,
      26,
      60,
      224,
      84,
      128,
      90,
      3,
      76,
      244,
      44,
      169,
      13,
      209,
      146,
      62,
      231,
      97,
      68,
      170,
      193,
      5,
      68,
      47,
      79,
      168,
      31,
      98,
      187,
      83,
      115,
      158,
      25,
      226,
      178,
      33,
      3,
      13,
      205,
      23,
      82,
      125,
      131,
      48,
      222,
      4,
      156,
      229,
      219,
      112,
      169,
      126,
      184,
      160,
      173,
      247,
      148,
      221,
      163,
      205,
      50,
      154,
      209,
      201,
      82,
      102,
      58,
      137,
      226,
      60,
      212,
      47,
      86,
      43,
      92,
      199,
      93,
      23,
      78,
      221,
      49,
      10,
      163,
      55,
      105,
      134,
      141,
      230,
      85,
      203,
      146,
      218,
      59,
      128,
      121,
      241,
      142,
      101,
      250,
      67,
      180,
      212,
      167,
      112,
      3,
      239,
      203,
      112,
      56,
      100,
      54,
      6,
      202,
      137,
      147,
      25,
      86,
      211,
      79,
      149,
      89,
      17,
      222,
      112,
      175,
      34,
      123,
      121,
      114,
      163,
      206,
      168,
      195,
      156,
      45,
      109,
      232,
      3,
      92,
      38,
      135,
      188,
      218,
      185,
      106,
      168,
      174,
      73,
      105,
      73,
      43,
      59,
      231,
      60,
      60,
      17,
      59,
      115,
      1,
      52,
      137,
      191,
      200,
      123,
      145,
      65,
      189,
      6,
      93,
      80,
      66,
      7,
      65,
      144,
      106,
      138,
      111,
      134,
      70,
      250,
      190,
      65,
      143,
      170,
      112,
      38,
      177,
      213,
      154,
      3,
      210,
      50,
      140,
      15,
      240,
      255,
      70,
      215,
      120,
      144,
      44,
      87,
      74,
      95,
      189,
      120,
      3,
      112,
      204,
      40,
      55,
      52,
      221,
      50,
      111,
      179,
      108,
      149,
      43,
      205,
      88,
      80,
      43,
      78,
      229,
      164,
      93,
      193,
      189,
      42,
      209,
      135,
      5,
      170,
      127,
      65,
      28,
      141,
      220,
      152,
      239,
      164,
      58,
      21,
      234,
      184,
      198,
      164,
      61,
      13,
      243,
      91,
      241,
      65,
      74,
      114,
      30,
      6,
      18,
      76,
      57,
      176,
      144,
      58,
      102,
      4,
      185,
      156,
      107,
      137,
      243,
      28,
      9,
      4,
      216,
      238,
      62,
      99,
      176,
      255,
      122,
      217,
      238,
      217,
      62,
      126,
      119,
      73,
      55,
      2,
      3,
      1,
      0,
      1,
      2,
      130,
      2,
      0,
      43,
      162,
      195,
      94,
      21,
      175,
      43,
      174,
      111,
      37,
      48,
      17,
      111,
      136,
      199,
      228,
      142,
      118,
      210,
      223,
      38,
      190,
      17,
      183,
      61,
      163,
      114,
      97,
      116,
      219,
      21,
      57,
      38,
      31,
      118,
      129,
      234,
      233,
      190,
      215,
      118,
      51,
      135,
      97,
      65,
      236,
      105,
      135,
      176,
      66,
      94,
      245,
      144,
      200,
      34,
      215,
      149,
      65,
      180,
      125,
      196,
      129,
      147,
      172,
      234,
      39,
      160,
      200,
      58,
      27,
      169,
      146,
      123,
      13,
      73,
      74,
      98,
      237,
      119,
      224,
      211,
      196,
      161,
      162,
      201,
      199,
      46,
      116,
      52,
      51,
      91,
      243,
      42,
      182,
      74,
      192,
      120,
      25,
      164,
      55,
      109,
      137,
      42,
      177,
      18,
      136,
      218,
      9,
      194,
      147,
      164,
      200,
      185,
      163,
      85,
      207,
      44,
      148,
      76,
      236,
      94,
      62,
      236,
      217,
      194,
      51,
      233,
      69,
      65,
      252,
      215,
      57,
      225,
      37,
      54,
      18,
      163,
      117,
      6,
      52,
      19,
      58,
      81,
      175,
      19,
      130,
      203,
      201,
      203,
      179,
      173,
      204,
      33,
      244,
      24,
      153,
      69,
      55,
      224,
      221,
      4,
      21,
      192,
      42,
      35,
      144,
      89,
      130,
      75,
      62,
      237,
      206,
      255,
      189,
      170,
      124,
      21,
      221,
      224,
      19,
      144,
      233,
      152,
      225,
      55,
      244,
      8,
      205,
      114,
      5,
      124,
      115,
      62,
      86,
      234,
      88,
      98,
      113,
      243,
      182,
      22,
      79,
      73,
      96,
      19,
      251,
      69,
      42,
      14,
      195,
      208,
      17,
      145,
      84,
      10,
      150,
      76,
      196,
      199,
      10,
      53,
      35,
      95,
      112,
      53,
      24,
      90,
      169,
      230,
      235,
      157,
      147,
      111,
      115,
      10,
      138,
      136,
      156,
      103,
      130,
      153,
      236,
      185,
      208,
      181,
      160,
      175,
      117,
      212,
      137,
      253,
      218,
      22,
      20,
      47,
      60,
      130,
      55,
      246,
      8,
      85,
      93,
      7,
      181,
      229,
      47,
      106,
      164,
      43,
      168,
      216,
      238,
      212,
      23,
      0,
      158,
      13,
      1,
      156,
      25,
      163,
      179,
      237,
      32,
      119,
      247,
      149,
      59,
      195,
      242,
      50,
      58,
      107,
      80,
      13,
      127,
      243,
      4,
      111,
      101,
      176,
      249,
      147,
      73,
      29,
      92,
      60,
      134,
      221,
      18,
      7,
      235,
      156,
      44,
      155,
      101,
      151,
      35,
      94,
      177,
      55,
      61,
      51,
      12,
      139,
      119,
      10,
      124,
      243,
      174,
      10,
      43,
      100,
      193,
      79,
      117,
      118,
      135,
      72,
      125,
      146,
      204,
      146,
      76,
      30,
      168,
      169,
      102,
      24,
      226,
      216,
      33,
      207,
      137,
      153,
      152,
      127,
      121,
      26,
      251,
      109,
      57,
      26,
      149,
      120,
      149,
      196,
      196,
      211,
      33,
      174,
      139,
      136,
      239,
      233,
      219,
      76,
      150,
      186,
      64,
      137,
      197,
      111,
      182,
      70,
      121,
      24,
      55,
      105,
      93,
      6,
      112,
      212,
      208,
      125,
      137,
      132,
      164,
      43,
      176,
      63,
      62,
      97,
      23,
      63,
      204,
      25,
      203,
      37,
      13,
      147,
      50,
      188,
      58,
      218,
      19,
      112,
      181,
      93,
      131,
      13,
      90,
      13,
      15,
      123,
      9,
      187,
      68,
      130,
      56,
      197,
      29,
      31,
      66,
      166,
      124,
      137,
      41,
      4,
      241,
      25,
      227,
      123,
      38,
      9,
      66,
      253,
      123,
      71,
      198,
      254,
      173,
      52,
      224,
      22,
      221,
      154,
      223,
      42,
      226,
      245,
      124,
      182,
      183,
      88,
      23,
      249,
      243,
      251,
      239,
      168,
      202,
      230,
      172,
      123,
      79,
      92,
      39,
      176,
      159,
      250,
      169,
      170,
      53,
      106,
      172,
      1,
      184,
      186,
      100,
      212,
      116,
      226,
      213,
      130,
      65,
      170,
      247,
      57,
      236,
      53,
      209,
      156,
      223,
      102,
      217,
      195,
      222,
      51,
      126,
      117,
      129,
      2,
      130,
      1,
      1,
      0,
      249,
      200,
      115,
      137,
      240,
      106,
      239,
      90,
      188,
      152,
      68,
      203,
      124,
      20,
      35,
      90,
      30,
      100,
      42,
      69,
      84,
      117,
      166,
      146,
      185,
      157,
      54,
      151,
      35,
      33,
      206,
      36,
      124,
      137,
      144,
      44,
      23,
      68,
      116,
      241,
      33,
      79,
      217,
      117,
      165,
      56,
      154,
      209,
      26,
      242,
      193,
      34,
      219,
      165,
      239,
      206,
      204,
      186,
      179,
      136,
      225,
      82,
      225,
      57,
      33,
      126,
      203,
      144,
      153,
      185,
      244,
      177,
      28,
      239,
      177,
      14,
      198,
      83,
      12,
      96,
      254,
      27,
      22,
      22,
      2,
      226,
      220,
      118,
      200,
      92,
      74,
      94,
      7,
      200,
      158,
      18,
      102,
      205,
      119,
      187,
      113,
      84,
      53,
      82,
      94,
      32,
      208,
      186,
      33,
      142,
      36,
      159,
      200,
      150,
      30,
      115,
      212,
      109,
      65,
      237,
      187,
      137,
      10,
      189,
      223,
      180,
      183,
      168,
      88,
      197,
      64,
      119,
      235,
      6,
      255,
      225,
      245,
      35,
      157,
      9,
      224,
      134,
      59,
      82,
      36,
      173,
      183,
      161,
      234,
      0,
      173,
      14,
      217,
      12,
      13,
      33,
      2,
      144,
      183,
      124,
      241,
      54,
      131,
      154,
      16,
      14,
      65,
      170,
      88,
      55,
      117,
      74,
      106,
      230,
      207,
      117,
      229,
      1,
      148,
      204,
      43,
      219,
      234,
      82,
      81,
      135,
      101,
      24,
      90,
      168,
      47,
      157,
      6,
      26,
      109,
      44,
      100,
      148,
      186,
      92,
      43,
      157,
      193,
      42,
      177,
      130,
      165,
      91,
      179,
      88,
      166,
      144,
      22,
      128,
      112,
      24,
      227,
      76,
      17,
      203,
      150,
      32,
      150,
      155,
      253,
      24,
      232,
      109,
      37,
      245,
      42,
      146,
      110,
      230,
      66,
      201,
      139,
      133,
      92,
      62,
      212,
      107,
      70,
      115,
      179,
      34,
      242,
      195,
      247,
      54,
      127,
      180,
      222,
      103,
      42,
      161,
      2,
      130,
      1,
      1,
      0,
      243,
      183,
      122,
      31,
      64,
      198,
      188,
      147,
      77,
      44,
      38,
      93,
      149,
      236,
      105,
      245,
      15,
      56,
      62,
      150,
      88,
      48,
      204,
      190,
      224,
      152,
      219,
      58,
      150,
      97,
      234,
      172,
      161,
      189,
      201,
      96,
      94,
      121,
      48,
      94,
      77,
      46,
      163,
      177,
      181,
      116,
      142,
      90,
      251,
      225,
      32,
      129,
      251,
      122,
      254,
      116,
      44,
      242,
      164,
      62,
      217,
      182,
      237,
      39,
      117,
      122,
      4,
      1,
      2,
      156,
      75,
      22,
      60,
      151,
      150,
      153,
      232,
      140,
      20,
      71,
      244,
      47,
      157,
      79,
      208,
      195,
      31,
      252,
      6,
      57,
      99,
      133,
      206,
      44,
      33,
      58,
      3,
      116,
      226,
      122,
      225,
      248,
      52,
      157,
      34,
      88,
      194,
      25,
      169,
      137,
      2,
      17,
      130,
      42,
      25,
      56,
      209,
      221,
      53,
      141,
      145,
      44,
      208,
      24,
      150,
      158,
      192,
      170,
      67,
      187,
      89,
      189,
      229,
      214,
      66,
      33,
      181,
      198,
      49,
      119,
      52,
      78,
      14,
      144,
      36,
      93,
      3,
      33,
      23,
      105,
      169,
      36,
      48,
      229,
      0,
      50,
      44,
      89,
      146,
      65,
      130,
      238,
      118,
      55,
      108,
      235,
      207,
      45,
      123,
      235,
      58,
      222,
      13,
      54,
      91,
      252,
      75,
      121,
      72,
      10,
      56,
      167,
      126,
      206,
      195,
      24,
      255,
      25,
      238,
      108,
      73,
      87,
      104,
      69,
      213,
      34,
      208,
      109,
      130,
      150,
      207,
      160,
      202,
      179,
      232,
      49,
      171,
      247,
      107,
      141,
      78,
      146,
      148,
      59,
      117,
      155,
      218,
      204,
      8,
      30,
      26,
      12,
      42,
      158,
      70,
      237,
      115,
      80,
      205,
      41,
      108,
      28,
      185,
      196,
      143,
      6,
      243,
      242,
      110,
      49,
      49,
      121,
      66,
      100,
      55,
      241,
      255,
      235,
      164,
      39,
      72,
      141,
      22,
      92,
      252,
      215,
      2,
      130,
      1,
      1,
      0,
      171,
      22,
      50,
      149,
      67,
      184,
      107,
      19,
      210,
      99,
      213,
      147,
      46,
      252,
      184,
      46,
      44,
      236,
      220,
      203,
      58,
      11,
      143,
      185,
      166,
      43,
      89,
      205,
      241,
      193,
      96,
      234,
      58,
      231,
      26,
      122,
      40,
      193,
      185,
      251,
      195,
      158,
      102,
      203,
      159,
      12,
      131,
      118,
      64,
      168,
      15,
      195,
      233,
      128,
      226,
      29,
      218,
      186,
      242,
      232,
      9,
      181,
      244,
      16,
      102,
      177,
      235,
      138,
      178,
      208,
      221,
      26,
      71,
      64,
      162,
      29,
      5,
      152,
      178,
      188,
      232,
      175,
      242,
      211,
      198,
      204,
      78,
      199,
      137,
      123,
      53,
      112,
      236,
      145,
      236,
      59,
      156,
      112,
      149,
      215,
      44,
      203,
      201,
      238,
      14,
      13,
      26,
      10,
      179,
      155,
      33,
      216,
      211,
      210,
      135,
      47,
      61,
      76,
      76,
      193,
      34,
      23,
      190,
      228,
      201,
      10,
      134,
      85,
      103,
      224,
      75,
      197,
      23,
      149,
      102,
      197,
      5,
      92,
      140,
      94,
      204,
      140,
      4,
      171,
      193,
      245,
      190,
      246,
      199,
      74,
      9,
      63,
      71,
      73,
      106,
      224,
      182,
      90,
      27,
      100,
      23,
      240,
      7,
      250,
      9,
      143,
      74,
      72,
      252,
      61,
      152,
      56,
      13,
      186,
      228,
      84,
      211,
      51,
      223,
      16,
      109,
      230,
      38,
      188,
      149,
      157,
      80,
      144,
      122,
      224,
      2,
      36,
      226,
      158,
      77,
      50,
      255,
      253,
      163,
      28,
      40,
      191,
      216,
      36,
      127,
      11,
      134,
      105,
      166,
      17,
      77,
      157,
      25,
      220,
      133,
      107,
      118,
      156,
      142,
      255,
      204,
      103,
      171,
      225,
      82,
      93,
      178,
      45,
      184,
      183,
      17,
      158,
      213,
      25,
      32,
      155,
      221,
      213,
      205,
      150,
      55,
      118,
      246,
      253,
      158,
      176,
      140,
      105,
      207,
      181,
      99,
      137,
      166,
      96,
      49,
      161,
      2,
      130,
      1,
      0,
      29,
      15,
      233,
      1,
      39,
      17,
      75,
      213,
      104,
      227,
      117,
      227,
      189,
      8,
      7,
      14,
      144,
      245,
      13,
      9,
      146,
      148,
      167,
      37,
      175,
      212,
      170,
      119,
      207,
      12,
      248,
      22,
      3,
      231,
      132,
      198,
      248,
      29,
      13,
      118,
      129,
      79,
      169,
      119,
      124,
      130,
      220,
      162,
      222,
      220,
      86,
      171,
      9,
      88,
      254,
      84,
      206,
      51,
      85,
      0,
      165,
      167,
      153,
      154,
      21,
      249,
      41,
      215,
      16,
      255,
      160,
      56,
      147,
      155,
      35,
      251,
      80,
      110,
      187,
      208,
      100,
      190,
      244,
      204,
      90,
      193,
      153,
      227,
      204,
      190,
      53,
      46,
      244,
      137,
      240,
      160,
      97,
      95,
      35,
      206,
      177,
      121,
      142,
      148,
      154,
      78,
      233,
      62,
      116,
      40,
      1,
      86,
      35,
      38,
      112,
      1,
      133,
      141,
      18,
      96,
      194,
      74,
      12,
      186,
      145,
      227,
      118,
      104,
      23,
      81,
      148,
      254,
      255,
      20,
      80,
      168,
      130,
      107,
      146,
      228,
      123,
      25,
      63,
      197,
      82,
      128,
      192,
      233,
      198,
      71,
      244,
      66,
      123,
      142,
      35,
      58,
      216,
      109,
      9,
      242,
      195,
      241,
      57,
      169,
      156,
      84,
      118,
      77,
      31,
      52,
      202,
      189,
      69,
      232,
      16,
      138,
      2,
      90,
      1,
      12,
      46,
      251,
      82,
      52,
      199,
      177,
      8,
      98,
      136,
      58,
      227,
      120,
      7,
      216,
      35,
      245,
      85,
      211,
      105,
      58,
      32,
      162,
      52,
      233,
      197,
      43,
      127,
      45,
      46,
      231,
      23,
      210,
      132,
      216,
      158,
      74,
      170,
      137,
      160,
      2,
      46,
      234,
      250,
      126,
      11,
      73,
      47,
      114,
      24,
      52,
      243,
      78,
      109,
      156,
      145,
      205,
      171,
      115,
      98,
      78,
      125,
      110,
      207,
      74,
      242,
      28,
      234,
      126,
      168,
      1,
      131,
      54,
      71,
      207,
      104,
      219,
      2,
      130,
      1,
      1,
      0,
      166,
      74,
      95,
      190,
      150,
      21,
      80,
      111,
      5,
      214,
      140,
      147,
      40,
      93,
      6,
      48,
      100,
      30,
      226,
      45,
      85,
      192,
      129,
      144,
      224,
      206,
      52,
      173,
      102,
      84,
      63,
      156,
      73,
      152,
      127,
      171,
      254,
      65,
      51,
      236,
      63,
      62,
      148,
      41,
      206,
      69,
      91,
      41,
      66,
      125,
      96,
      62,
      228,
      30,
      191,
      173,
      212,
      69,
      161,
      127,
      219,
      144,
      115,
      152,
      25,
      46,
      70,
      210,
      151,
      174,
      108,
      56,
      108,
      91,
      202,
      202,
      194,
      234,
      130,
      109,
      143,
      88,
      127,
      47,
      4,
      51,
      142,
      3,
      231,
      159,
      77,
      69,
      109,
      189,
      39,
      71,
      149,
      13,
      90,
      81,
      132,
      75,
      88,
      222,
      63,
      216,
      168,
      86,
      67,
      246,
      126,
      95,
      75,
      229,
      97,
      49,
      178,
      142,
      214,
      22,
      66,
      49,
      2,
      191,
      144,
      142,
      2,
      184,
      157,
      106,
      241,
      54,
      136,
      199,
      226,
      250,
      245,
      137,
      123,
      82,
      214,
      7,
      158,
      107,
      114,
      106,
      219,
      135,
      104,
      220,
      223,
      199,
      167,
      48,
      215,
      67,
      217,
      34,
      125,
      24,
      196,
      30,
      78,
      22,
      94,
      91,
      152,
      166,
      10,
      86,
      161,
      240,
      208,
      144,
      255,
      10,
      140,
      214,
      160,
      160,
      33,
      81,
      246,
      216,
      75,
      158,
      74,
      220,
      49,
      159,
      135,
      104,
      201,
      180,
      106,
      93,
      200,
      234,
      188,
      85,
      47,
      158,
      240,
      125,
      120,
      11,
      241,
      153,
      197,
      220,
      13,
      213,
      73,
      162,
      237,
      220,
      239,
      57,
      193,
      221,
      251,
      252,
      98,
      255,
      112,
      220,
      28,
      76,
      13,
      46,
      217,
      3,
      134,
      64,
      158,
      90,
      81,
      55,
      61,
      11,
      52,
      10,
      238,
      114,
      90,
      93,
      205,
      149,
      161,
      85,
      173,
      25,
      141,
      245,
      203,
      9,
    ],
    "type": "Buffer",
  },
  "publicKey": {
    "data": [
      48,
      130,
      2,
      10,
      2,
      130,
      2,
      1,
      0,
      237,
      204,
      75,
      30,
      140,
      90,
      29,
      214,
      20,
      240,
      69,
      246,
      138,
      62,
      102,
      227,
      101,
      200,
      65,
      133,
      129,
      83,
      18,
      140,
      57,
      245,
      91,
      87,
      99,
      151,
      210,
      115,
      71,
      17,
      218,
      35,
      93,
      244,
      95,
      56,
      219,
      235,
      0,
      124,
      44,
      189,
      26,
      156,
      116,
      222,
      56,
      202,
      253,
      68,
      213,
      183,
      181,
      242,
      171,
      57,
      29,
      16,
      122,
      236,
      61,
      234,
      45,
      228,
      99,
      93,
      200,
      222,
      129,
      216,
      214,
      189,
      8,
      250,
      232,
      129,
      85,
      100,
      140,
      80,
      28,
      210,
      126,
      45,
      112,
      219,
      1,
      139,
      59,
      129,
      236,
      252,
      69,
      134,
      193,
      57,
      185,
      195,
      205,
      250,
      234,
      203,
      219,
      200,
      61,
      151,
      173,
      214,
      214,
      234,
      190,
      92,
      111,
      245,
      164,
      209,
      223,
      204,
      119,
      57,
      18,
      120,
      99,
      166,
      38,
      245,
      43,
      91,
      40,
      229,
      8,
      163,
      176,
      75,
      34,
      250,
      28,
      212,
      206,
      110,
      53,
      66,
      4,
      156,
      82,
      138,
      102,
      22,
      230,
      85,
      30,
      54,
      223,
      225,
      121,
      211,
      15,
      196,
      211,
      173,
      124,
      40,
      76,
      89,
      129,
      235,
      171,
      255,
      199,
      12,
      177,
      37,
      153,
      199,
      41,
      116,
      161,
      228,
      136,
      250,
      178,
      40,
      118,
      55,
      213,
      37,
      187,
      33,
      79,
      92,
      178,
      247,
      204,
      202,
      70,
      63,
      166,
      50,
      124,
      143,
      42,
      1,
      208,
      1,
      26,
      253,
      75,
      0,
      192,
      229,
      121,
      109,
      244,
      189,
      159,
      85,
      158,
      246,
      198,
      12,
      26,
      60,
      224,
      84,
      128,
      90,
      3,
      76,
      244,
      44,
      169,
      13,
      209,
      146,
      62,
      231,
      97,
      68,
      170,
      193,
      5,
      68,
      47,
      79,
      168,
      31,
      98,
      187,
      83,
      115,
      158,
      25,
      226,
      178,
      33,
      3,
      13,
      205,
      23,
      82,
      125,
      131,
      48,
      222,
      4,
      156,
      229,
      219,
      112,
      169,
      126,
      184,
      160,
      173,
      247,
      148,
      221,
      163,
      205,
      50,
      154,
      209,
      201,
      82,
      102,
      58,
      137,
      226,
      60,
      212,
      47,
      86,
      43,
      92,
      199,
      93,
      23,
      78,
      221,
      49,
      10,
      163,
      55,
      105,
      134,
      141,
      230,
      85,
      203,
      146,
      218,
      59,
      128,
      121,
      241,
      142,
      101,
      250,
      67,
      180,
      212,
      167,
      112,
      3,
      239,
      203,
      112,
      56,
      100,
      54,
      6,
      202,
      137,
      147,
      25,
      86,
      211,
      79,
      149,
      89,
      17,
      222,
      112,
      175,
      34,
      123,
      121,
      114,
      163,
      206,
      168,
      195,
      156,
      45,
      109,
      232,
      3,
      92,
      38,
      135,
      188,
      218,
      185,
      106,
      168,
      174,
      73,
      105,
      73,
      43,
      59,
      231,
      60,
      60,
      17,
      59,
      115,
      1,
      52,
      137,
      191,
      200,
      123,
      145,
      65,
      189,
      6,
      93,
      80,
      66,
      7,
      65,
      144,
      106,
      138,
      111,
      134,
      70,
      250,
      190,
      65,
      143,
      170,
      112,
      38,
      177,
      213,
      154,
      3,
      210,
      50,
      140,
      15,
      240,
      255,
      70,
      215,
      120,
      144,
      44,
      87,
      74,
      95,
      189,
      120,
      3,
      112,
      204,
      40,
      55,
      52,
      221,
      50,
      111,
      179,
      108,
      149,
      43,
      205,
      88,
      80,
      43,
      78,
      229,
      164,
      93,
      193,
      189,
      42,
      209,
      135,
      5,
      170,
      127,
      65,
      28,
      141,
      220,
      152,
      239,
      164,
      58,
      21,
      234,
      184,
      198,
      164,
      61,
      13,
      243,
      91,
      241,
      65,
      74,
      114,
      30,
      6,
      18,
      76,
      57,
      176,
      144,
      58,
      102,
      4,
      185,
      156,
      107,
      137,
      243,
      28,
      9,
      4,
      216,
      238,
      62,
      99,
      176,
      255,
      122,
      217,
      238,
      217,
      62,
      126,
      119,
      73,
      55,
      2,
      3,
      1,
      0,
      1,
    ],
    "type": "Buffer",
  },
  "type": "RSA",
  "use": "sig",
}
`;

exports[`Kryptos (RSA) export should export jwk 1`] = `
{
  "alg": "RS512",
  "d": "K6LDXhWvK65vJTARb4jH5I520t8mvhG3PaNyYXTbFTkmH3aB6um-13Yzh2FB7GmHsEJe9ZDIIteVQbR9xIGTrOonoMg6G6mSew1JSmLtd-DTxKGiyccudDQzW_MqtkrAeBmkN22JKrESiNoJwpOkyLmjVc8slEzsXj7s2cIz6UVB_Nc54SU2EqN1BjQTOlGvE4LLycuzrcwh9BiZRTfg3QQVwCojkFmCSz7tzv-9qnwV3eATkOmY4Tf0CM1yBXxzPlbqWGJx87YWT0lgE_tFKg7D0BGRVAqWTMTHCjUjX3A1GFqp5uudk29zCoqInGeCmey50LWgr3XUif3aFhQvPII39ghVXQe15S9qpCuo2O7UFwCeDQGcGaOz7SB395U7w_IyOmtQDX_zBG9lsPmTSR1cPIbdEgfrnCybZZcjXrE3PTMMi3cKfPOuCitkwU91dodIfZLMkkweqKlmGOLYIc-JmZh_eRr7bTkalXiVxMTTIa6LiO_p20yWukCJxW-2RnkYN2ldBnDU0H2JhKQrsD8-YRc_zBnLJQ2TMrw62hNwtV2DDVoND3sJu0SCOMUdH0KmfIkpBPEZ43smCUL9e0fG_q004Bbdmt8q4vV8trdYF_nz---oyuase09cJ7Cf-qmqNWqsAbi6ZNR04tWCQar3Oew10ZzfZtnD3jN-dYE",
  "dp": "qxYylUO4axPSY9WTLvy4Lizs3Ms6C4-5pitZzfHBYOo65xp6KMG5-8OeZsufDIN2QKgPw-mA4h3auvLoCbX0EGax64qy0N0aR0CiHQWYsrzor_LTxsxOx4l7NXDskew7nHCV1yzLye4ODRoKs5sh2NPShy89TEzBIhe-5MkKhlVn4EvFF5VmxQVcjF7MjASrwfW-9sdKCT9HSWrgtlobZBfwB_oJj0pI_D2YOA265FTTM98QbeYmvJWdUJB64AIk4p5NMv_9oxwov9gkfwuGaaYRTZ0Z3IVrdpyO_8xnq-FSXbItuLcRntUZIJvd1c2WN3b2_Z6wjGnPtWOJpmAxoQ",
  "dq": "HQ_pAScRS9Vo43XjvQgHDpD1DQmSlKclr9Sqd88M-BYD54TG-B0NdoFPqXd8gtyi3txWqwlY_lTOM1UApaeZmhX5KdcQ_6A4k5sj-1Buu9BkvvTMWsGZ48y-NS70ifCgYV8jzrF5jpSaTuk-dCgBViMmcAGFjRJgwkoMupHjdmgXUZT-_xRQqIJrkuR7GT_FUoDA6cZH9EJ7jiM62G0J8sPxOamcVHZNHzTKvUXoEIoCWgEMLvtSNMexCGKIOuN4B9gj9VXTaTogojTpxSt_LS7nF9KE2J5KqomgAi7q-n4LSS9yGDTzTm2ckc2rc2JOfW7PSvIc6n6oAYM2R89o2w",
  "e": "AQAB",
  "kid": "3b9a051f-e1ec-562b-bf92-7cf92ec465ba",
  "kty": "RSA",
  "n": "7cxLHoxaHdYU8EX2ij5m42XIQYWBUxKMOfVbV2OX0nNHEdojXfRfONvrAHwsvRqcdN44yv1E1be18qs5HRB67D3qLeRjXcjegdjWvQj66IFVZIxQHNJ-LXDbAYs7gez8RYbBObnDzfrqy9vIPZet1tbqvlxv9aTR38x3ORJ4Y6Ym9StbKOUIo7BLIvoc1M5uNUIEnFKKZhbmVR423-F50w_E0618KExZgeur_8cMsSWZxyl0oeSI-rIodjfVJbshT1yy98zKRj-mMnyPKgHQARr9SwDA5Xlt9L2fVZ72xgwaPOBUgFoDTPQsqQ3Rkj7nYUSqwQVEL0-oH2K7U3OeGeKyIQMNzRdSfYMw3gSc5dtwqX64oK33lN2jzTKa0clSZjqJ4jzUL1YrXMddF07dMQqjN2mGjeZVy5LaO4B58Y5l-kO01KdwA-_LcDhkNgbKiZMZVtNPlVkR3nCvInt5cqPOqMOcLW3oA1wmh7zauWqorklpSSs75zw8ETtzATSJv8h7kUG9Bl1QQgdBkGqKb4ZG-r5Bj6pwJrHVmgPSMowP8P9G13iQLFdKX714A3DMKDc03TJvs2yVK81YUCtO5aRdwb0q0YcFqn9BHI3cmO-kOhXquMakPQ3zW_FBSnIeBhJMObCQOmYEuZxrifMcCQTY7j5jsP962e7ZPn53STc",
  "p": "-chzifBq71q8mETLfBQjWh5kKkVUdaaSuZ02lyMhziR8iZAsF0R08SFP2XWlOJrRGvLBItul787MurOI4VLhOSF-y5CZufSxHO-xDsZTDGD-GxYWAuLcdshcSl4HyJ4SZs13u3FUNVJeINC6IY4kn8iWHnPUbUHtu4kKvd-0t6hYxUB36wb_4fUjnQnghjtSJK23oeoArQ7ZDA0hApC3fPE2g5oQDkGqWDd1Smrmz3XlAZTMK9vqUlGHZRhaqC-dBhptLGSUulwrncEqsYKlW7NYppAWgHAY40wRy5Yglpv9GOhtJfUqkm7mQsmLhVw-1GtGc7Mi8sP3Nn-03mcqoQ",
  "q": "87d6H0DGvJNNLCZdlexp9Q84PpZYMMy-4JjbOpZh6qyhvclgXnkwXk0uo7G1dI5a--Eggft6_nQs8qQ-2bbtJ3V6BAECnEsWPJeWmeiMFEf0L51P0MMf_AY5Y4XOLCE6A3TieuH4NJ0iWMIZqYkCEYIqGTjR3TWNkSzQGJaewKpDu1m95dZCIbXGMXc0Tg6QJF0DIRdpqSQw5QAyLFmSQYLudjds688te-s63g02W_xLeUgKOKd-zsMY_xnubElXaEXVItBtgpbPoMqz6DGr92uNTpKUO3Wb2swIHhoMKp5G7XNQzSlsHLnEjwbz8m4xMXlCZDfx_-ukJ0iNFlz81w",
  "qi": "pkpfvpYVUG8F1oyTKF0GMGQe4i1VwIGQ4M40rWZUP5xJmH-r_kEz7D8-lCnORVspQn1gPuQev63URaF_25BzmBkuRtKXrmw4bFvKysLqgm2PWH8vBDOOA-efTUVtvSdHlQ1aUYRLWN4_2KhWQ_Z-X0vlYTGyjtYWQjECv5COAridavE2iMfi-vWJe1LWB55rcmrbh2jc38enMNdD2SJ9GMQeThZeW5imClah8NCQ_wqM1qCgIVH22EueStwxn4doybRqXcjqvFUvnvB9eAvxmcXcDdVJou3c7znB3fv8Yv9w3BxMDS7ZA4ZAnlpRNz0LNAruclpdzZWhVa0ZjfXLCQ",
  "use": "sig",
}
`;

exports[`Kryptos (RSA) export should export pem 1`] = `
{
  "algorithm": "RS512",
  "id": "3b9a051f-e1ec-562b-bf92-7cf92ec465ba",
  "privateKey": "-----BEGIN RSA PRIVATE KEY-----
MIIJKQIBAAKCAgEA7cxLHoxaHdYU8EX2ij5m42XIQYWBUxKMOfVbV2OX0nNHEdoj
XfRfONvrAHwsvRqcdN44yv1E1be18qs5HRB67D3qLeRjXcjegdjWvQj66IFVZIxQ
HNJ+LXDbAYs7gez8RYbBObnDzfrqy9vIPZet1tbqvlxv9aTR38x3ORJ4Y6Ym9Stb
KOUIo7BLIvoc1M5uNUIEnFKKZhbmVR423+F50w/E0618KExZgeur/8cMsSWZxyl0
oeSI+rIodjfVJbshT1yy98zKRj+mMnyPKgHQARr9SwDA5Xlt9L2fVZ72xgwaPOBU
gFoDTPQsqQ3Rkj7nYUSqwQVEL0+oH2K7U3OeGeKyIQMNzRdSfYMw3gSc5dtwqX64
oK33lN2jzTKa0clSZjqJ4jzUL1YrXMddF07dMQqjN2mGjeZVy5LaO4B58Y5l+kO0
1KdwA+/LcDhkNgbKiZMZVtNPlVkR3nCvInt5cqPOqMOcLW3oA1wmh7zauWqorklp
SSs75zw8ETtzATSJv8h7kUG9Bl1QQgdBkGqKb4ZG+r5Bj6pwJrHVmgPSMowP8P9G
13iQLFdKX714A3DMKDc03TJvs2yVK81YUCtO5aRdwb0q0YcFqn9BHI3cmO+kOhXq
uMakPQ3zW/FBSnIeBhJMObCQOmYEuZxrifMcCQTY7j5jsP962e7ZPn53STcCAwEA
AQKCAgArosNeFa8rrm8lMBFviMfkjnbS3ya+Ebc9o3JhdNsVOSYfdoHq6b7XdjOH
YUHsaYewQl71kMgi15VBtH3EgZOs6iegyDobqZJ7DUlKYu134NPEoaLJxy50NDNb
8yq2SsB4GaQ3bYkqsRKI2gnCk6TIuaNVzyyUTOxePuzZwjPpRUH81znhJTYSo3UG
NBM6Ua8TgsvJy7OtzCH0GJlFN+DdBBXAKiOQWYJLPu3O/72qfBXd4BOQ6ZjhN/QI
zXIFfHM+VupYYnHzthZPSWAT+0UqDsPQEZFUCpZMxMcKNSNfcDUYWqnm652Tb3MK
ioicZ4KZ7LnQtaCvddSJ/doWFC88gjf2CFVdB7XlL2qkK6jY7tQXAJ4NAZwZo7Pt
IHf3lTvD8jI6a1ANf/MEb2Ww+ZNJHVw8ht0SB+ucLJtllyNesTc9MwyLdwp8864K
K2TBT3V2h0h9ksySTB6oqWYY4tghz4mZmH95GvttORqVeJXExNMhrouI7+nbTJa6
QInFb7ZGeRg3aV0GcNTQfYmEpCuwPz5hFz/MGcslDZMyvDraE3C1XYMNWg0Pewm7
RII4xR0fQqZ8iSkE8RnjeyYJQv17R8b+rTTgFt2a3yri9Xy2t1gX+fP776jK5qx7
T1wnsJ/6qao1aqwBuLpk1HTi1YJBqvc57DXRnN9m2cPeM351gQKCAQEA+chzifBq
71q8mETLfBQjWh5kKkVUdaaSuZ02lyMhziR8iZAsF0R08SFP2XWlOJrRGvLBItul
787MurOI4VLhOSF+y5CZufSxHO+xDsZTDGD+GxYWAuLcdshcSl4HyJ4SZs13u3FU
NVJeINC6IY4kn8iWHnPUbUHtu4kKvd+0t6hYxUB36wb/4fUjnQnghjtSJK23oeoA
rQ7ZDA0hApC3fPE2g5oQDkGqWDd1Smrmz3XlAZTMK9vqUlGHZRhaqC+dBhptLGSU
ulwrncEqsYKlW7NYppAWgHAY40wRy5Yglpv9GOhtJfUqkm7mQsmLhVw+1GtGc7Mi
8sP3Nn+03mcqoQKCAQEA87d6H0DGvJNNLCZdlexp9Q84PpZYMMy+4JjbOpZh6qyh
vclgXnkwXk0uo7G1dI5a++Eggft6/nQs8qQ+2bbtJ3V6BAECnEsWPJeWmeiMFEf0
L51P0MMf/AY5Y4XOLCE6A3TieuH4NJ0iWMIZqYkCEYIqGTjR3TWNkSzQGJaewKpD
u1m95dZCIbXGMXc0Tg6QJF0DIRdpqSQw5QAyLFmSQYLudjds688te+s63g02W/xL
eUgKOKd+zsMY/xnubElXaEXVItBtgpbPoMqz6DGr92uNTpKUO3Wb2swIHhoMKp5G
7XNQzSlsHLnEjwbz8m4xMXlCZDfx/+ukJ0iNFlz81wKCAQEAqxYylUO4axPSY9WT
Lvy4Lizs3Ms6C4+5pitZzfHBYOo65xp6KMG5+8OeZsufDIN2QKgPw+mA4h3auvLo
CbX0EGax64qy0N0aR0CiHQWYsrzor/LTxsxOx4l7NXDskew7nHCV1yzLye4ODRoK
s5sh2NPShy89TEzBIhe+5MkKhlVn4EvFF5VmxQVcjF7MjASrwfW+9sdKCT9HSWrg
tlobZBfwB/oJj0pI/D2YOA265FTTM98QbeYmvJWdUJB64AIk4p5NMv/9oxwov9gk
fwuGaaYRTZ0Z3IVrdpyO/8xnq+FSXbItuLcRntUZIJvd1c2WN3b2/Z6wjGnPtWOJ
pmAxoQKCAQAdD+kBJxFL1WjjdeO9CAcOkPUNCZKUpyWv1Kp3zwz4FgPnhMb4HQ12
gU+pd3yC3KLe3FarCVj+VM4zVQClp5maFfkp1xD/oDiTmyP7UG670GS+9MxawZnj
zL41LvSJ8KBhXyPOsXmOlJpO6T50KAFWIyZwAYWNEmDCSgy6keN2aBdRlP7/FFCo
gmuS5HsZP8VSgMDpxkf0QnuOIzrYbQnyw/E5qZxUdk0fNMq9RegQigJaAQwu+1I0
x7EIYog643gH2CP1VdNpOiCiNOnFK38tLucX0oTYnkqqiaACLur6fgtJL3IYNPNO
bZyRzatzYk59bs9K8hzqfqgBgzZHz2jbAoIBAQCmSl++lhVQbwXWjJMoXQYwZB7i
LVXAgZDgzjStZlQ/nEmYf6v+QTPsPz6UKc5FWylCfWA+5B6/rdRFoX/bkHOYGS5G
0peubDhsW8rKwuqCbY9Yfy8EM44D559NRW29J0eVDVpRhEtY3j/YqFZD9n5fS+Vh
MbKO1hZCMQK/kI4CuJ1q8TaIx+L69Yl7UtYHnmtyatuHaNzfx6cw10PZIn0YxB5O
Fl5bmKYKVqHw0JD/CozWoKAhUfbYS55K3DGfh2jJtGpdyOq8VS+e8H14C/GZxdwN
1Umi7dzvOcHd+/xi/3DcHEwNLtkDhkCeWlE3PQs0Cu5yWl3NlaFVrRmN9csJ
-----END RSA PRIVATE KEY-----
",
  "publicKey": "-----BEGIN RSA PUBLIC KEY-----
MIICCgKCAgEA7cxLHoxaHdYU8EX2ij5m42XIQYWBUxKMOfVbV2OX0nNHEdojXfRf
ONvrAHwsvRqcdN44yv1E1be18qs5HRB67D3qLeRjXcjegdjWvQj66IFVZIxQHNJ+
LXDbAYs7gez8RYbBObnDzfrqy9vIPZet1tbqvlxv9aTR38x3ORJ4Y6Ym9StbKOUI
o7BLIvoc1M5uNUIEnFKKZhbmVR423+F50w/E0618KExZgeur/8cMsSWZxyl0oeSI
+rIodjfVJbshT1yy98zKRj+mMnyPKgHQARr9SwDA5Xlt9L2fVZ72xgwaPOBUgFoD
TPQsqQ3Rkj7nYUSqwQVEL0+oH2K7U3OeGeKyIQMNzRdSfYMw3gSc5dtwqX64oK33
lN2jzTKa0clSZjqJ4jzUL1YrXMddF07dMQqjN2mGjeZVy5LaO4B58Y5l+kO01Kdw
A+/LcDhkNgbKiZMZVtNPlVkR3nCvInt5cqPOqMOcLW3oA1wmh7zauWqorklpSSs7
5zw8ETtzATSJv8h7kUG9Bl1QQgdBkGqKb4ZG+r5Bj6pwJrHVmgPSMowP8P9G13iQ
LFdKX714A3DMKDc03TJvs2yVK81YUCtO5aRdwb0q0YcFqn9BHI3cmO+kOhXquMak
PQ3zW/FBSnIeBhJMObCQOmYEuZxrifMcCQTY7j5jsP962e7ZPn53STcCAwEAAQ==
-----END RSA PUBLIC KEY-----
",
  "type": "RSA",
  "use": "sig",
}
`;

exports[`Kryptos (RSA) to should return db 1`] = `
{
  "algorithm": "RS512",
  "createdAt": 2023-01-01T08:00:00.000Z,
  "curve": null,
  "encryption": null,
  "expiresAt": 2099-01-01T08:00:00.000Z,
  "hidden": false,
  "id": "3b9a051f-e1ec-562b-bf92-7cf92ec465ba",
  "isExternal": false,
  "issuer": "https://example.com",
  "jwksUri": "https://example.com/.well-known/jwks.json",
  "notBefore": 2023-01-01T08:00:00.000Z,
  "operations": [
    "sign",
    "verify",
  ],
  "ownerId": "f02c2d0c-44ee-5e4e-8b3b-39d46924d227",
  "privateKey": "MIIJKQIBAAKCAgEA7cxLHoxaHdYU8EX2ij5m42XIQYWBUxKMOfVbV2OX0nNHEdojXfRfONvrAHwsvRqcdN44yv1E1be18qs5HRB67D3qLeRjXcjegdjWvQj66IFVZIxQHNJ-LXDbAYs7gez8RYbBObnDzfrqy9vIPZet1tbqvlxv9aTR38x3ORJ4Y6Ym9StbKOUIo7BLIvoc1M5uNUIEnFKKZhbmVR423-F50w_E0618KExZgeur_8cMsSWZxyl0oeSI-rIodjfVJbshT1yy98zKRj-mMnyPKgHQARr9SwDA5Xlt9L2fVZ72xgwaPOBUgFoDTPQsqQ3Rkj7nYUSqwQVEL0-oH2K7U3OeGeKyIQMNzRdSfYMw3gSc5dtwqX64oK33lN2jzTKa0clSZjqJ4jzUL1YrXMddF07dMQqjN2mGjeZVy5LaO4B58Y5l-kO01KdwA-_LcDhkNgbKiZMZVtNPlVkR3nCvInt5cqPOqMOcLW3oA1wmh7zauWqorklpSSs75zw8ETtzATSJv8h7kUG9Bl1QQgdBkGqKb4ZG-r5Bj6pwJrHVmgPSMowP8P9G13iQLFdKX714A3DMKDc03TJvs2yVK81YUCtO5aRdwb0q0YcFqn9BHI3cmO-kOhXquMakPQ3zW_FBSnIeBhJMObCQOmYEuZxrifMcCQTY7j5jsP962e7ZPn53STcCAwEAAQKCAgArosNeFa8rrm8lMBFviMfkjnbS3ya-Ebc9o3JhdNsVOSYfdoHq6b7XdjOHYUHsaYewQl71kMgi15VBtH3EgZOs6iegyDobqZJ7DUlKYu134NPEoaLJxy50NDNb8yq2SsB4GaQ3bYkqsRKI2gnCk6TIuaNVzyyUTOxePuzZwjPpRUH81znhJTYSo3UGNBM6Ua8TgsvJy7OtzCH0GJlFN-DdBBXAKiOQWYJLPu3O_72qfBXd4BOQ6ZjhN_QIzXIFfHM-VupYYnHzthZPSWAT-0UqDsPQEZFUCpZMxMcKNSNfcDUYWqnm652Tb3MKioicZ4KZ7LnQtaCvddSJ_doWFC88gjf2CFVdB7XlL2qkK6jY7tQXAJ4NAZwZo7PtIHf3lTvD8jI6a1ANf_MEb2Ww-ZNJHVw8ht0SB-ucLJtllyNesTc9MwyLdwp8864KK2TBT3V2h0h9ksySTB6oqWYY4tghz4mZmH95GvttORqVeJXExNMhrouI7-nbTJa6QInFb7ZGeRg3aV0GcNTQfYmEpCuwPz5hFz_MGcslDZMyvDraE3C1XYMNWg0Pewm7RII4xR0fQqZ8iSkE8RnjeyYJQv17R8b-rTTgFt2a3yri9Xy2t1gX-fP776jK5qx7T1wnsJ_6qao1aqwBuLpk1HTi1YJBqvc57DXRnN9m2cPeM351gQKCAQEA-chzifBq71q8mETLfBQjWh5kKkVUdaaSuZ02lyMhziR8iZAsF0R08SFP2XWlOJrRGvLBItul787MurOI4VLhOSF-y5CZufSxHO-xDsZTDGD-GxYWAuLcdshcSl4HyJ4SZs13u3FUNVJeINC6IY4kn8iWHnPUbUHtu4kKvd-0t6hYxUB36wb_4fUjnQnghjtSJK23oeoArQ7ZDA0hApC3fPE2g5oQDkGqWDd1Smrmz3XlAZTMK9vqUlGHZRhaqC-dBhptLGSUulwrncEqsYKlW7NYppAWgHAY40wRy5Yglpv9GOhtJfUqkm7mQsmLhVw-1GtGc7Mi8sP3Nn-03mcqoQKCAQEA87d6H0DGvJNNLCZdlexp9Q84PpZYMMy-4JjbOpZh6qyhvclgXnkwXk0uo7G1dI5a--Eggft6_nQs8qQ-2bbtJ3V6BAECnEsWPJeWmeiMFEf0L51P0MMf_AY5Y4XOLCE6A3TieuH4NJ0iWMIZqYkCEYIqGTjR3TWNkSzQGJaewKpDu1m95dZCIbXGMXc0Tg6QJF0DIRdpqSQw5QAyLFmSQYLudjds688te-s63g02W_xLeUgKOKd-zsMY_xnubElXaEXVItBtgpbPoMqz6DGr92uNTpKUO3Wb2swIHhoMKp5G7XNQzSlsHLnEjwbz8m4xMXlCZDfx_-ukJ0iNFlz81wKCAQEAqxYylUO4axPSY9WTLvy4Lizs3Ms6C4-5pitZzfHBYOo65xp6KMG5-8OeZsufDIN2QKgPw-mA4h3auvLoCbX0EGax64qy0N0aR0CiHQWYsrzor_LTxsxOx4l7NXDskew7nHCV1yzLye4ODRoKs5sh2NPShy89TEzBIhe-5MkKhlVn4EvFF5VmxQVcjF7MjASrwfW-9sdKCT9HSWrgtlobZBfwB_oJj0pI_D2YOA265FTTM98QbeYmvJWdUJB64AIk4p5NMv_9oxwov9gkfwuGaaYRTZ0Z3IVrdpyO_8xnq-FSXbItuLcRntUZIJvd1c2WN3b2_Z6wjGnPtWOJpmAxoQKCAQAdD-kBJxFL1WjjdeO9CAcOkPUNCZKUpyWv1Kp3zwz4FgPnhMb4HQ12gU-pd3yC3KLe3FarCVj-VM4zVQClp5maFfkp1xD_oDiTmyP7UG670GS-9MxawZnjzL41LvSJ8KBhXyPOsXmOlJpO6T50KAFWIyZwAYWNEmDCSgy6keN2aBdRlP7_FFCogmuS5HsZP8VSgMDpxkf0QnuOIzrYbQnyw_E5qZxUdk0fNMq9RegQigJaAQwu-1I0x7EIYog643gH2CP1VdNpOiCiNOnFK38tLucX0oTYnkqqiaACLur6fgtJL3IYNPNObZyRzatzYk59bs9K8hzqfqgBgzZHz2jbAoIBAQCmSl--lhVQbwXWjJMoXQYwZB7iLVXAgZDgzjStZlQ_nEmYf6v-QTPsPz6UKc5FWylCfWA-5B6_rdRFoX_bkHOYGS5G0peubDhsW8rKwuqCbY9Yfy8EM44D559NRW29J0eVDVpRhEtY3j_YqFZD9n5fS-VhMbKO1hZCMQK_kI4CuJ1q8TaIx-L69Yl7UtYHnmtyatuHaNzfx6cw10PZIn0YxB5OFl5bmKYKVqHw0JD_CozWoKAhUfbYS55K3DGfh2jJtGpdyOq8VS-e8H14C_GZxdwN1Umi7dzvOcHd-_xi_3DcHEwNLtkDhkCeWlE3PQs0Cu5yWl3NlaFVrRmN9csJ",
  "publicKey": "MIICCgKCAgEA7cxLHoxaHdYU8EX2ij5m42XIQYWBUxKMOfVbV2OX0nNHEdojXfRfONvrAHwsvRqcdN44yv1E1be18qs5HRB67D3qLeRjXcjegdjWvQj66IFVZIxQHNJ-LXDbAYs7gez8RYbBObnDzfrqy9vIPZet1tbqvlxv9aTR38x3ORJ4Y6Ym9StbKOUIo7BLIvoc1M5uNUIEnFKKZhbmVR423-F50w_E0618KExZgeur_8cMsSWZxyl0oeSI-rIodjfVJbshT1yy98zKRj-mMnyPKgHQARr9SwDA5Xlt9L2fVZ72xgwaPOBUgFoDTPQsqQ3Rkj7nYUSqwQVEL0-oH2K7U3OeGeKyIQMNzRdSfYMw3gSc5dtwqX64oK33lN2jzTKa0clSZjqJ4jzUL1YrXMddF07dMQqjN2mGjeZVy5LaO4B58Y5l-kO01KdwA-_LcDhkNgbKiZMZVtNPlVkR3nCvInt5cqPOqMOcLW3oA1wmh7zauWqorklpSSs75zw8ETtzATSJv8h7kUG9Bl1QQgdBkGqKb4ZG-r5Bj6pwJrHVmgPSMowP8P9G13iQLFdKX714A3DMKDc03TJvs2yVK81YUCtO5aRdwb0q0YcFqn9BHI3cmO-kOhXquMakPQ3zW_FBSnIeBhJMObCQOmYEuZxrifMcCQTY7j5jsP962e7ZPn53STcCAwEAAQ",
  "purpose": "test",
  "type": "RSA",
  "updatedAt": 2023-12-01T08:00:00.000Z,
  "use": "sig",
}
`;

exports[`Kryptos (RSA) to should return json 1`] = `
{
  "algorithm": "RS512",
  "createdAt": 2023-01-01T08:00:00.000Z,
  "curve": null,
  "encryption": null,
  "expiresAt": 2099-01-01T08:00:00.000Z,
  "expiresIn": 2366841600,
  "hasPrivateKey": true,
  "hasPublicKey": true,
  "hidden": false,
  "id": "3b9a051f-e1ec-562b-bf92-7cf92ec465ba",
  "isActive": true,
  "isExpired": false,
  "isExternal": false,
  "issuer": "https://example.com",
  "jwksUri": "https://example.com/.well-known/jwks.json",
  "modulus": 4096,
  "notBefore": 2023-01-01T08:00:00.000Z,
  "operations": [
    "sign",
    "verify",
  ],
  "ownerId": "f02c2d0c-44ee-5e4e-8b3b-39d46924d227",
  "purpose": "test",
  "type": "RSA",
  "updatedAt": 2023-12-01T08:00:00.000Z,
  "use": "sig",
}
`;

exports[`Kryptos (RSA) to should return jwk with private key 1`] = `
{
  "alg": "RS512",
  "d": "K6LDXhWvK65vJTARb4jH5I520t8mvhG3PaNyYXTbFTkmH3aB6um-13Yzh2FB7GmHsEJe9ZDIIteVQbR9xIGTrOonoMg6G6mSew1JSmLtd-DTxKGiyccudDQzW_MqtkrAeBmkN22JKrESiNoJwpOkyLmjVc8slEzsXj7s2cIz6UVB_Nc54SU2EqN1BjQTOlGvE4LLycuzrcwh9BiZRTfg3QQVwCojkFmCSz7tzv-9qnwV3eATkOmY4Tf0CM1yBXxzPlbqWGJx87YWT0lgE_tFKg7D0BGRVAqWTMTHCjUjX3A1GFqp5uudk29zCoqInGeCmey50LWgr3XUif3aFhQvPII39ghVXQe15S9qpCuo2O7UFwCeDQGcGaOz7SB395U7w_IyOmtQDX_zBG9lsPmTSR1cPIbdEgfrnCybZZcjXrE3PTMMi3cKfPOuCitkwU91dodIfZLMkkweqKlmGOLYIc-JmZh_eRr7bTkalXiVxMTTIa6LiO_p20yWukCJxW-2RnkYN2ldBnDU0H2JhKQrsD8-YRc_zBnLJQ2TMrw62hNwtV2DDVoND3sJu0SCOMUdH0KmfIkpBPEZ43smCUL9e0fG_q004Bbdmt8q4vV8trdYF_nz---oyuase09cJ7Cf-qmqNWqsAbi6ZNR04tWCQar3Oew10ZzfZtnD3jN-dYE",
  "dp": "qxYylUO4axPSY9WTLvy4Lizs3Ms6C4-5pitZzfHBYOo65xp6KMG5-8OeZsufDIN2QKgPw-mA4h3auvLoCbX0EGax64qy0N0aR0CiHQWYsrzor_LTxsxOx4l7NXDskew7nHCV1yzLye4ODRoKs5sh2NPShy89TEzBIhe-5MkKhlVn4EvFF5VmxQVcjF7MjASrwfW-9sdKCT9HSWrgtlobZBfwB_oJj0pI_D2YOA265FTTM98QbeYmvJWdUJB64AIk4p5NMv_9oxwov9gkfwuGaaYRTZ0Z3IVrdpyO_8xnq-FSXbItuLcRntUZIJvd1c2WN3b2_Z6wjGnPtWOJpmAxoQ",
  "dq": "HQ_pAScRS9Vo43XjvQgHDpD1DQmSlKclr9Sqd88M-BYD54TG-B0NdoFPqXd8gtyi3txWqwlY_lTOM1UApaeZmhX5KdcQ_6A4k5sj-1Buu9BkvvTMWsGZ48y-NS70ifCgYV8jzrF5jpSaTuk-dCgBViMmcAGFjRJgwkoMupHjdmgXUZT-_xRQqIJrkuR7GT_FUoDA6cZH9EJ7jiM62G0J8sPxOamcVHZNHzTKvUXoEIoCWgEMLvtSNMexCGKIOuN4B9gj9VXTaTogojTpxSt_LS7nF9KE2J5KqomgAi7q-n4LSS9yGDTzTm2ckc2rc2JOfW7PSvIc6n6oAYM2R89o2w",
  "e": "AQAB",
  "exp": 4070937600,
  "iat": 1672560000,
  "iss": "https://example.com",
  "jku": "https://example.com/.well-known/jwks.json",
  "key_ops": [
    "sign",
    "verify",
  ],
  "kid": "3b9a051f-e1ec-562b-bf92-7cf92ec465ba",
  "kty": "RSA",
  "n": "7cxLHoxaHdYU8EX2ij5m42XIQYWBUxKMOfVbV2OX0nNHEdojXfRfONvrAHwsvRqcdN44yv1E1be18qs5HRB67D3qLeRjXcjegdjWvQj66IFVZIxQHNJ-LXDbAYs7gez8RYbBObnDzfrqy9vIPZet1tbqvlxv9aTR38x3ORJ4Y6Ym9StbKOUIo7BLIvoc1M5uNUIEnFKKZhbmVR423-F50w_E0618KExZgeur_8cMsSWZxyl0oeSI-rIodjfVJbshT1yy98zKRj-mMnyPKgHQARr9SwDA5Xlt9L2fVZ72xgwaPOBUgFoDTPQsqQ3Rkj7nYUSqwQVEL0-oH2K7U3OeGeKyIQMNzRdSfYMw3gSc5dtwqX64oK33lN2jzTKa0clSZjqJ4jzUL1YrXMddF07dMQqjN2mGjeZVy5LaO4B58Y5l-kO01KdwA-_LcDhkNgbKiZMZVtNPlVkR3nCvInt5cqPOqMOcLW3oA1wmh7zauWqorklpSSs75zw8ETtzATSJv8h7kUG9Bl1QQgdBkGqKb4ZG-r5Bj6pwJrHVmgPSMowP8P9G13iQLFdKX714A3DMKDc03TJvs2yVK81YUCtO5aRdwb0q0YcFqn9BHI3cmO-kOhXquMakPQ3zW_FBSnIeBhJMObCQOmYEuZxrifMcCQTY7j5jsP962e7ZPn53STc",
  "nbf": 1672560000,
  "owner_id": "f02c2d0c-44ee-5e4e-8b3b-39d46924d227",
  "p": "-chzifBq71q8mETLfBQjWh5kKkVUdaaSuZ02lyMhziR8iZAsF0R08SFP2XWlOJrRGvLBItul787MurOI4VLhOSF-y5CZufSxHO-xDsZTDGD-GxYWAuLcdshcSl4HyJ4SZs13u3FUNVJeINC6IY4kn8iWHnPUbUHtu4kKvd-0t6hYxUB36wb_4fUjnQnghjtSJK23oeoArQ7ZDA0hApC3fPE2g5oQDkGqWDd1Smrmz3XlAZTMK9vqUlGHZRhaqC-dBhptLGSUulwrncEqsYKlW7NYppAWgHAY40wRy5Yglpv9GOhtJfUqkm7mQsmLhVw-1GtGc7Mi8sP3Nn-03mcqoQ",
  "purpose": "test",
  "q": "87d6H0DGvJNNLCZdlexp9Q84PpZYMMy-4JjbOpZh6qyhvclgXnkwXk0uo7G1dI5a--Eggft6_nQs8qQ-2bbtJ3V6BAECnEsWPJeWmeiMFEf0L51P0MMf_AY5Y4XOLCE6A3TieuH4NJ0iWMIZqYkCEYIqGTjR3TWNkSzQGJaewKpDu1m95dZCIbXGMXc0Tg6QJF0DIRdpqSQw5QAyLFmSQYLudjds688te-s63g02W_xLeUgKOKd-zsMY_xnubElXaEXVItBtgpbPoMqz6DGr92uNTpKUO3Wb2swIHhoMKp5G7XNQzSlsHLnEjwbz8m4xMXlCZDfx_-ukJ0iNFlz81w",
  "qi": "pkpfvpYVUG8F1oyTKF0GMGQe4i1VwIGQ4M40rWZUP5xJmH-r_kEz7D8-lCnORVspQn1gPuQev63URaF_25BzmBkuRtKXrmw4bFvKysLqgm2PWH8vBDOOA-efTUVtvSdHlQ1aUYRLWN4_2KhWQ_Z-X0vlYTGyjtYWQjECv5COAridavE2iMfi-vWJe1LWB55rcmrbh2jc38enMNdD2SJ9GMQeThZeW5imClah8NCQ_wqM1qCgIVH22EueStwxn4doybRqXcjqvFUvnvB9eAvxmcXcDdVJou3c7znB3fv8Yv9w3BxMDS7ZA4ZAnlpRNz0LNAruclpdzZWhVa0ZjfXLCQ",
  "uat": 1701417600,
  "use": "sig",
}
`;

exports[`Kryptos (RSA) to should return jwk with public key 1`] = `
{
  "alg": "RS512",
  "e": "AQAB",
  "exp": 4070937600,
  "iat": 1672560000,
  "iss": "https://example.com",
  "jku": "https://example.com/.well-known/jwks.json",
  "key_ops": [
    "sign",
    "verify",
  ],
  "kid": "3b9a051f-e1ec-562b-bf92-7cf92ec465ba",
  "kty": "RSA",
  "n": "7cxLHoxaHdYU8EX2ij5m42XIQYWBUxKMOfVbV2OX0nNHEdojXfRfONvrAHwsvRqcdN44yv1E1be18qs5HRB67D3qLeRjXcjegdjWvQj66IFVZIxQHNJ-LXDbAYs7gez8RYbBObnDzfrqy9vIPZet1tbqvlxv9aTR38x3ORJ4Y6Ym9StbKOUIo7BLIvoc1M5uNUIEnFKKZhbmVR423-F50w_E0618KExZgeur_8cMsSWZxyl0oeSI-rIodjfVJbshT1yy98zKRj-mMnyPKgHQARr9SwDA5Xlt9L2fVZ72xgwaPOBUgFoDTPQsqQ3Rkj7nYUSqwQVEL0-oH2K7U3OeGeKyIQMNzRdSfYMw3gSc5dtwqX64oK33lN2jzTKa0clSZjqJ4jzUL1YrXMddF07dMQqjN2mGjeZVy5LaO4B58Y5l-kO01KdwA-_LcDhkNgbKiZMZVtNPlVkR3nCvInt5cqPOqMOcLW3oA1wmh7zauWqorklpSSs75zw8ETtzATSJv8h7kUG9Bl1QQgdBkGqKb4ZG-r5Bj6pwJrHVmgPSMowP8P9G13iQLFdKX714A3DMKDc03TJvs2yVK81YUCtO5aRdwb0q0YcFqn9BHI3cmO-kOhXquMakPQ3zW_FBSnIeBhJMObCQOmYEuZxrifMcCQTY7j5jsP962e7ZPn53STc",
  "nbf": 1672560000,
  "owner_id": "f02c2d0c-44ee-5e4e-8b3b-39d46924d227",
  "purpose": "test",
  "uat": 1701417600,
  "use": "sig",
}
`;

exports[`Kryptos (RSA) to should return kryptos string 1`] = `"kryptos:eyJlIjoiQVFBQiIsIm4iOiI3Y3hMSG94YUhkWVU4RVgyaWo1bTQyWElRWVdCVXhLTU9mVmJWMk9YMG5OSEVkb2pYZlJmT052ckFId3N2UnFjZE40NHl2MUUxYmUxOHFzNUhSQjY3RDNxTGVSalhjamVnZGpXdlFqNjZJRlZaSXhRSE5KLUxYRGJBWXM3Z2V6OFJZYkJPYm5EemZycXk5dklQWmV0MXRicXZseHY5YVRSMzh4M09SSjRZNlltOVN0YktPVUlvN0JMSXZvYzFNNXVOVUlFbkZLS1poYm1WUjQyMy1GNTB3X0UwNjE4S0V4WmdldXJfOGNNc1NXWnh5bDBvZVNJLXJJb2RqZlZKYnNoVDF5eTk4ektSai1tTW55UEtnSFFBUnI5U3dEQTVYbHQ5TDJmVlo3Mnhnd2FQT0JVZ0ZvRFRQUXNxUTNSa2o3bllVU3F3UVZFTDAtb0gySzdVM09lR2VLeUlRTU56UmRTZllNdzNnU2M1ZHR3cVg2NG9LMzNsTjJqelRLYTBjbFNaanFKNGp6VUwxWXJYTWRkRjA3ZE1RcWpOMm1HamVaVnk1TGFPNEI1OFk1bC1rTzAxS2R3QS1fTGNEaGtOZ2JLaVpNWlZ0TlBsVmtSM25DdkludDVjcVBPcU1PY0xXM29BMXdtaDd6YXVXcW9ya2xwU1NzNzV6dzhFVHR6QVRTSnY4aDdrVUc5QmwxUVFnZEJrR3FLYjRaRy1yNUJqNnB3SnJIVm1nUFNNb3dQOFA5RzEzaVFMRmRLWDcxNEEzRE1LRGMwM1RKdnMyeVZLODFZVUN0TzVhUmR3YjBxMFljRnFuOUJISTNjbU8ta09oWHF1TWFrUFEzeldfRkJTbkllQmhKTU9iQ1FPbVlFdVp4cmlmTWNDUVRZN2o1anNQOTYyZTdaUG41M1NUYyIsImQiOiJLNkxEWGhXdks2NXZKVEFSYjRqSDVJNTIwdDhtdmhHM1BhTnlZWFRiRlRrbUgzYUI2dW0tMTNZemgyRkI3R21Ic0VKZTlaRElJdGVWUWJSOXhJR1RyT29ub01nNkc2bVNldzFKU21MdGQtRFR4S0dpeWNjdWREUXpXX01xdGtyQWVCbWtOMjJKS3JFU2lOb0p3cE9reUxtalZjOHNsRXpzWGo3czJjSXo2VVZCX05jNTRTVTJFcU4xQmpRVE9sR3ZFNExMeWN1enJjd2g5QmlaUlRmZzNRUVZ3Q29qa0ZtQ1N6N3R6di05cW53VjNlQVRrT21ZNFRmMENNMXlCWHh6UGxicVdHSng4N1lXVDBsZ0VfdEZLZzdEMEJHUlZBcVdUTVRIQ2pValgzQTFHRnFwNXV1ZGsyOXpDb3FJbkdlQ21leTUwTFdncjNYVWlmM2FGaFF2UElJMzlnaFZYUWUxNVM5cXBDdW8yTzdVRndDZURRR2NHYU96N1NCMzk1VTd3X0l5T210UURYX3pCRzlsc1BtVFNSMWNQSWJkRWdmcm5DeWJaWmNqWHJFM1BUTU1pM2NLZlBPdUNpdGt3VTkxZG9kSWZaTE1ra3dlcUtsbUdPTFlJYy1KbVpoX2VScjdiVGthbFhpVnhNVFRJYTZMaU9fcDIweVd1a0NKeFctMlJua1lOMmxkQm5EVTBIMkpoS1Fyc0Q4LVlSY196Qm5MSlEyVE1ydzYyaE53dFYyRERWb05EM3NKdTBTQ09NVWRIMEttZklrcEJQRVo0M3NtQ1VMOWUwZkdfcTAwNEJiZG10OHE0dlY4dHJkWUZfbnotLS1veXVhc2UwOWNKN0NmLXFtcU5XcXNBYmk2Wk5SMDR0V0NRYXIzT2V3MTBaemZadG5EM2pOLWRZRSIsInAiOiItY2h6aWZCcTcxcThtRVRMZkJRaldoNWtLa1ZVZGFhU3VaMDJseU1oemlSOGlaQXNGMFIwOFNGUDJYV2xPSnJSR3ZMQkl0dWw3ODdNdXJPSTRWTGhPU0YteTVDWnVmU3hITy14RHNaVERHRC1HeFlXQXVMY2RzaGNTbDRIeUo0U1pzMTN1M0ZVTlZKZUlOQzZJWTRrbjhpV0huUFViVUh0dTRrS3ZkLTB0NmhZeFVCMzZ3Yl80ZlVqblFuZ2hqdFNKSzIzb2VvQXJRN1pEQTBoQXBDM2ZQRTJnNW9RRGtHcVdEZDFTbXJtejNYbEFaVE1LOXZxVWxHSFpSaGFxQy1kQmhwdExHU1V1bHdybmNFcXNZS2xXN05ZcHBBV2dIQVk0MHdSeTVZZ2xwdjlHT2h0SmZVcWttN21Rc21MaFZ3LTFHdEdjN01pOHNQM05uLTAzbWNxb1EiLCJxIjoiODdkNkgwREd2Sk5OTENaZGxleHA5UTg0UHBaWU1NeS00SmpiT3BaaDZxeWh2Y2xnWG5rd1hrMHVvN0cxZEk1YS0tRWdnZnQ2X25RczhxUS0yYmJ0SjNWNkJBRUNuRXNXUEplV21laU1GRWYwTDUxUDBNTWZfQVk1WTRYT0xDRTZBM1RpZXVINE5KMGlXTUlacVlrQ0VZSXFHVGpSM1RXTmtTelFHSmFld0twRHUxbTk1ZFpDSWJYR01YYzBUZzZRSkYwRElSZHBxU1F3NVFBeUxGbVNRWUx1ZGpkczY4OHRlLXM2M2cwMldfeExlVWdLT0tkLXpzTVlfeG51YkVsWGFFWFZJdEJ0Z3BiUG9NcXo2REdyOTJ1TlRwS1VPM1diMnN3SUhob01LcDVHN1hOUXpTbHNITG5FandiejhtNHhNWGxDWkRmeF8tdWtKMGlORmx6ODF3IiwiZHAiOiJxeFl5bFVPNGF4UFNZOVdUTHZ5NExpenMzTXM2QzQtNXBpdFp6ZkhCWU9vNjV4cDZLTUc1LThPZVpzdWZESU4yUUtnUHctbUE0aDNhdXZMb0NiWDBFR2F4NjRxeTBOMGFSMENpSFFXWXNyem9yX0xUeHN4T3g0bDdOWERza2V3N25IQ1YxeXpMeWU0T0RSb0tzNXNoMk5QU2h5ODlURXpCSWhlLTVNa0tobFZuNEV2RkY1Vm14UVZjakY3TWpBU3J3ZlctOXNkS0NUOUhTV3JndGxvYlpCZndCX29KajBwSV9EMllPQTI2NUZUVE05OFFiZVltdkpXZFVKQjY0QUlrNHA1Tk12XzlveHdvdjlna2Z3dUdhYVlSVFowWjNJVnJkcHlPXzh4bnEtRlNYYkl0dUxjUm50VVpJSnZkMWMyV04zYjJfWjZ3akduUHRXT0pwbUF4b1EiLCJkcSI6IkhRX3BBU2NSUzlWbzQzWGp2UWdIRHBEMURRbVNsS2NscjlTcWQ4OE0tQllENTRURy1CME5kb0ZQcVhkOGd0eWkzdHhXcXdsWV9sVE9NMVVBcGFlWm1oWDVLZGNRXzZBNGs1c2otMUJ1dTlCa3Z2VE1Xc0daNDh5LU5TNzBpZkNnWVY4anpyRjVqcFNhVHVrLWRDZ0JWaU1tY0FHRmpSSmd3a29NdXBIamRtZ1hVWlQtX3hSUXFJSnJrdVI3R1RfRlVvREE2Y1pIOUVKN2ppTTYyRzBKOHNQeE9hbWNWSFpOSHpUS3ZVWG9FSW9DV2dFTUx2dFNOTWV4Q0dLSU91TjRCOWdqOVZYVGFUb2dvalRweFN0X0xTN25GOUtFMko1S3FvbWdBaTdxLW40TFNTOXlHRFR6VG0yY2tjMnJjMkpPZlc3UFN2SWM2bjZvQVlNMlI4OW8ydyIsInFpIjoicGtwZnZwWVZVRzhGMW95VEtGMEdNR1FlNGkxVndJR1E0TTQwcldaVVA1eEptSC1yX2tFejdEOC1sQ25PUlZzcFFuMWdQdVFldjYzVVJhRl8yNUJ6bUJrdVJ0S1hybXc0YkZ2S3lzTHFnbTJQV0g4dkJET09BLWVmVFVWdHZTZEhsUTFhVVlSTFdONF8yS2hXUV9aLVgwdmxZVEd5anRZV1FqRUN2NUNPQXJpZGF2RTJpTWZpLXZXSmUxTFdCNTVyY21yYmgyamMzOGVuTU5kRDJTSjlHTVFlVGhaZVc1aW1DbGFoOE5DUV93cU0xcUNnSVZIMjJFdWVTdHd4bjRkb3liUnFYY2pxdkZVdm52QjllQXZ4bWNYY0RkVkpvdTNjN3puQjNmdjhZdjl3M0J4TURTN1pBNFpBbmxwUk56MExOQXJ1Y2xwZHpaV2hWYTBaamZYTENRIiwia2lkIjoiM2I5YTA1MWYtZTFlYy01NjJiLWJmOTItN2NmOTJlYzQ2NWJhIiwiYWxnIjoiUlM1MTIiLCJ1c2UiOiJzaWciLCJrdHkiOiJSU0EiLCJleHAiOjQwNzA5Mzc2MDAsImlhdCI6MTY3MjU2MDAwMCwiaXNzIjoiaHR0cHM6Ly9leGFtcGxlLmNvbSIsImprdSI6Imh0dHBzOi8vZXhhbXBsZS5jb20vLndlbGwta25vd24vandrcy5qc29uIiwia2V5X29wcyI6WyJzaWduIiwidmVyaWZ5Il0sIm5iZiI6MTY3MjU2MDAwMCwib3duZXJfaWQiOiJmMDJjMmQwYy00NGVlLTVlNGUtOGIzYi0zOWQ0NjkyNGQyMjciLCJwdXJwb3NlIjoidGVzdCIsInVhdCI6MTcwMTQxNzYwMH0"`;
